# api-gateway-rust

./: .env  .env.example  Cargo.toml  README.md  microservice-false.rs
src/: main.rs
src/controller/: mod.rs  redirect_controller.rs  user_controller.rs
src/controllers/: auth_controller.rs  mod.rs  redirect_controller.rs  user_controller.rs
src/database/: config.rs
src/interface/: dto.rs  request.rs  response.rs
src/interfaces/: login.rs  mod.rs  request.rs  response.rs  token_response.rs
src/middleware/: jwt.rs
src/model/: user_model.rs
src/repository/: mongodb_repo.rs
src/routes/: handler.rs
