[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"]}
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
lazy_static = "1.4.0"
serde = '1.0.159'


dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.4.0"
default-features = false
features = ["sync"] 