[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = {version = "2.5.0", default-features = false, features = ["async-std-runtime"]} 
rocket = { version = "0.5.0-rc.2", features = ["json"]}
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
validator = { version = "0.16.0", features = ["derive"] }
serde = '1.0.159'
lazy_static = "1.4.0"
bcrypt = '0.14.0'
chrono = "0.4.24"
jsonwebtoken = "8.3.0"
dotenv = "0.15.0"

